@@ -5,7 +5,7 @@
 <link rel=stylesheet href="cc-style">
 <link rel=index href="cc/">
 <link rel=license href="#license">
-<link rel=author href="http://suika.fam.cx/~wakaba/who?" title=Wakaba lang=ja>
+<link rel=author href="#author">
 </head>
 <body>
 <h1><a href="cc/"><abbr title="Web Hypertext Application Conformance Checker"><img src="icons/title" alt="WebHACC"></abbr></a></h1>
@@ -48,12 +48,18 @@ and other Web languages.
 </div>
 
 <div class=section id=sourcecode>
-<h3>Source</h3>
+<h3>Source code</h3>
 
 <p><abbr title="Web Hypertext Application Conformance Checker">WebHACC</abbr>
 is written in pure Perl.  Its source code is 
 <a href="http://suika.fam.cx/gate/cvs/webroot/gate/2007/html/">available from
 the <abbr title="Concurrent Versions System">CVS</abbr> repository</a>.
+</div>
+
+<div class=section id=author>
+<h3>Author</h3>
+
+<p><a href="http://suika.fam.cx/~wakaba/who?" rel=author>Wakaba</a>.</p>
 </div>
 
 <div class=section id=license>
