@@ -1,3 +1,9 @@
+2008-08-17  Wakaba  <wakaba@suika.fam.cx>
+
+	* cc-about.en.html: Author section added.
+
+	* cc.cgi: |text/x-h2h| added.
+
 2008-08-16  Wakaba  <wakaba@suika.fam.cx>
 
 	* Makefile: Generate Japanese version of error description document.
